account service creation + refactoring